# studyrust

./: .gitignore  README.md
actix_todo/: Cargo.toml
actix_todo/src/: main.rs
actix_todo/src/api/: api.rs
actix_todo/src/models/: todo.rs
actix_todo/src/repository/: database.rs
arduino-uno/n01blink/: Cargo.toml  README.md
arduino-uno/n01blink/src/: main.rs
arduino-uno/n02displayi2c/: Cargo.toml  README.md
arduino-uno/n02displayi2c/.cargo/: config.toml
arduino-uno/n02displayi2c/src/: main.rs
arduino-uno/n02ultrasonic/: Cargo.toml  README.md
base_grammar/guessing_game/src/: main.rs
base_grammar/為你自己學Rust_高見龍/: Cargo.toml
base_grammar/為你自己學Rust_高見龍/base01/: Cargo.toml
base_grammar/為你自己學Rust_高見龍/base01/src/: main.rs  say_something.rs
base_grammar/為你自己學Rust_高見龍/bmi_calculator/src/: bmi.rs  main.rs
base_grammar/為你自己學Rust_高見龍/bmi_calculator/test/: bmi_test.rs
base_grammar/為你自己學Rust_高見龍/bmi_calculator/tests/: bmi_test.rs
base_grammar/為你自己學Rust_高見龍/calculator/src/: lib.rs
base_grammar/為你自己學Rust_高見龍/calculator/tests/: bmi_test.rs
base_grammar/為你自己學Rust_高見龍/fib/: Cargo.toml
base_grammar/為你自己學Rust_高見龍/fib/src/: lib.rs
base_grammar/為你自己學Rust_高見龍/hello-api/: Cargo.toml
base_grammar/為你自己學Rust_高見龍/hello-api/src/: main.rs
base_grammar/為你自己學Rust_高見龍/hello-bmi/: Cargo.toml
base_grammar/為你自己學Rust_高見龍/hello-bmi/src/: main.rs
base_grammar/為你自己學Rust_高見龍/hello-tauri/: package-lock.json  package.json
base_grammar/為你自己學Rust_高見龍/hello-tauri/src/: index.html  main.js  styles.css
base_grammar/為你自己學Rust_高見龍/hello-tauri/src-tauri/: tauri.conf.json
base_grammar/為你自己學Rust_高見龍/html-fib/: app.js  index.html
base_grammar/為你自己學Rust_高見龍/src/: main.rs
guessing_game/src/: main.rs
hello_world/src/: main.rs
stm32-rust-led/: Cargo.toml  README.MD
stm32-rust-led/src/: main.rs
stm32/_led13/: Cargo.toml  memory.x
stm32/_led13/.cargo/: config.toml
stm32/_led13/src/: main.rs
stm32/base01/: Cargo.toml  build.rs
stm32/base01/src/: main.rs
